Update env in docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
     build: .
     restart: always
     environment:
-      - POWERSTUDIO=$POWERSTUDIO
+      - LOGGING_LEVEL=$LOGGING_LEVEL
+      - POWERSTUDIO_HOST=$POWERSTUDIO_HOST
       - POWERSTUDIO_PORT=$POWERSTUDIO_PORT
       - MQTT_BROKER=$MQTT_BROKER
       - MQTT_PORT=$MQTT_PORT
@@ -14,7 +15,6 @@ services:
       - MQTT_CLIENT_ID=$MQTT_CLIENT_ID
       - MQTT_USERNAME=$MQTT_USERNAME
       - MQTT_PASSWORD=$MQTT_PASSWORD
-      - VAR_INFO_RETRIEVAL_INTERVAL=$VAR_INFO_RETRIEVAL_INTERVAL
       - VALUES_RETRIEVAL_INTERVAL=$VALUES_RETRIEVAL_INTERVAL
 
     networks:
