Update compose to use env_file and adjust pull policy

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,17 @@
 version: '3'
 
 services:
-  powerstudio-gateway:
-    image: powerstudio-gateway:latest
-    build: .
+  gaia-powerstudio-gateway:
+    image: gaia-powerstudio-gateway:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
-    environment:
-      - LOGGING_LEVEL=$LOGGING_LEVEL
-      - POWERSTUDIO_HOST=$POWERSTUDIO_HOST
-      - POWERSTUDIO_PORT=$POWERSTUDIO_PORT
-      - MQTT_BROKER=$MQTT_BROKER
-      - MQTT_PORT=$MQTT_PORT
-      - MQTT_TOPIC=$MQTT_TOPIC
-      - MQTT_CLIENT_ID=$MQTT_CLIENT_ID
-      - MQTT_USERNAME=$MQTT_USERNAME
-      - MQTT_PASSWORD=$MQTT_PASSWORD
-      - VALUES_RETRIEVAL_INTERVAL=$VALUES_RETRIEVAL_INTERVAL
-
+    env_file:
+      - stack.env
     networks:
       - emqx-network
+    pull_policy: build
 
 networks:
   emqx-network:
