--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  gaia-powerstudio-gateway:
+  powerstudio-gateway:
     image: gaia-powerstudio-gateway:latest
     build:
       context: .
